SERVER-15302 Reduce the scope of the CmdResync write unit of work

Otherwise, this causes TempReleases to happen inside of a write unit of
work, which is not allowed.